# tfn-robot

./: CMakeLists.txt  LICENSE  README.md  config.py  data_collector.py  dslr_capture.py  filter_points.py  package.xml  pkl_check.py  plotly_visualization.py  robot.py  robot_software_installation.md  utils_robot.py  visualization.py
assets/: dense_ladel.pcd
deprecated/: README.md  motion_primitives.py  mp_flow_pred.py  roll.py  roll_utils.py  video_recorder.py
launch/: azure_kinect.launch  camera_main.launch  camera_top.launch  depth_to_cloud.launch  mixed_media.launch  moveit_test_thing1.launch  moveit_test_thing2.launch  publish_calibration.launch  sawyer_eye_base_calibration.launch
pcl/: README.md
scripts/: basic_init_scene.py  hand_aruco_publisher.py  init_scene.py  tip_publisher.py
src/: temp.cpp
utils/: analyze.py  capture.py  change_order.py  data_formatter.py  dataset_stats.py  folder_offset.py  fuse.py  gif_stitcher.py  pc_matplotlib.py  pcer.py  plotly_pcer.py  segmentor.py  view.py
